Radial Reingold–Tilford Treeで作成。 参考URL http://bl.ocks.org/mbostock/4063550

--- a/WebContent/html/tree.html
+++ b/WebContent/html/tree.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" href="../css/style.css"/>
-    <script type="text/javascript" src="../js/d3.js"></script>
-    <script type="text/javascript" src="../js/d3.layout.js"></script>
+    <link type="text/css" rel="stylesheet" href="../css/tree/style.css"/>
+    <script type="text/javascript" src="../js/tree/d3.js"></script>
+    <script type="text/javascript" src="../js/tree/d3.layout.js"></script>
     <script type="text/javascript" src="../js/local_json.js"></script>
     <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
   </head>
   <body>
   <nav class="navbar navbar-default" role="navigation">
@@ -88,7 +88,7 @@
       </div>
       -->
     </div>
-    <script type="text/javascript" src="../js/init_tree.js"></script>
-    <script type="text/javascript" src="../js/get_nlp_data.js"></script>
+    <script type="text/javascript" src="../js/tree/init.js"></script>
+    <script type="text/javascript" src="../js/tree/get_nlp_data.js"></script>
   </body>
 </html>
