--- a/WebContent/html/area_rrt_tree.html
+++ b/WebContent/html/area_rrt_tree.html
@@ -14,7 +14,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="../js/bootstrap.min.js"></script>
   </head>
-  <body>
+  <body style="height:1000px">
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -25,70 +25,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">d3.layout.tree</a>
+      <a class="navbar-brand" href="#">TF-IDF</a>
+      <a id="map_link" class="navbar-brand" href="#"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Map</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <!--
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      -->
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <textarea id="input_data" class="form-control" rows="2" cols="60" placeholder="Input Data"></textarea>
-        </div>
-        <button id="show_button" class="form-control"  type="button" class="btn btn-default">
-          <span class="glyphicon glyphicon-hand-down" aria-hidden="true"></span> show!
-        </button>
-      </form>
-      <!--
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <div id="body">
-    <!--
-      <div id="footer">
-        d3.layout.tree
-      </div>
-      <div id="input_field">
-       <textarea id="input_data" rows="5" cols="40" type="text" placeholder="Input Data"></textarea>
-       <button id="show_button" type="button" class="btn btn-default">
-         <span class="glyphicon glyphicon-hand-down" aria-hidden="true"></span> show!
-       </button>
-       <img id="loading_gif" src="../img/loading.gif">
-      </div>
-      -->
-    </div>
-    <script type="text/javascript" src="../js/area_rrt_tree/get_nlp_data.js"></script>
+    <div id="map_body" style="margin-top:20px;margin-left:20px"></div>
+    <div id="svg_body" style="display:none"></div>
+    <script type="text/javascript" src="../js/area_rrt_tree/jquery.japan-map.min.js"></script>
     <script type="text/javascript" src="../js/area_rrt_tree/init.js"></script>
+    <script>
+    </script>
   </body>
 </html>
