--- a/WebContent/html/rrt_tree.html
+++ b/WebContent/html/rrt_tree.html
@@ -25,29 +25,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">d3.layout.tree</a>
+      <a class="navbar-brand" href="#">出現回数</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <!--
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      -->
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <textarea id="input_data" class="form-control" rows="2" cols="60" placeholder="Input Data"></textarea>
@@ -56,37 +38,10 @@
           <span class="glyphicon glyphicon-hand-down" aria-hidden="true"></span> show!
         </button>
       </form>
-      <!--
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
     <div id="body">
-    <!--
-      <div id="footer">
-        d3.layout.tree
-      </div>
-      <div id="input_field">
-       <textarea id="input_data" rows="5" cols="40" type="text" placeholder="Input Data"></textarea>
-       <button id="show_button" type="button" class="btn btn-default">
-         <span class="glyphicon glyphicon-hand-down" aria-hidden="true"></span> show!
-       </button>
-       <img id="loading_gif" src="../img/loading.gif">
-      </div>
-      -->
     </div>
     <script type="text/javascript" src="../js/rrt_tree/init.js"></script>
     <script type="text/javascript" src="../js/rrt_tree/get_nlp_data.js"></script>
